# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
carapi_project/: asgi.py  settings.py  urls.py  wsgi.py
cars/: models.py  serializer.py  tests.py  urls.py  views.py
cars/migrations/: 0001_initial.py
